# python-code-mcp

./: .gitignore  CLAUDE.md  SYSTEM_PROMPT.md  pyproject.toml  sample.py  test_flow.py  ty_client.py  ty_server.py
.github/workflows/: publish.yml
src/ty_lsp/: install.py  lsp.py  server.py
src/ty_lsp/testmod/: __init__.py  main.py  models.py  service.py  utils.py
