[project]
name = "python-code-mcp"
version = "0.2.0"
requires-python = ">=3.14"
dependencies = [
    "fastmcp==3.2.4",
    "ty==0.0.33",
]

[project.scripts]
python-code-mcp = "ty_lsp.server:main"

[tool.ty.environment]
extra-paths = ["C:\\Users\\user\\AppData\\Roaming\\Python\\Python314\\site-packages"]

[tool.hatch.build.targets.wheel]
packages = ["src/ty_lsp"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
